trunk/Archive2/23/0c935867aea93d/output
before:
a: 1
b: 2
c: 4.5
d: 5.5

2
2
1
2
4.5
5.5

after:
a: 1
b: 2
c: 3.33
d: 5.5


main.cpp: In member function 'void foo2_t<types<lhs ...> >::operator()(const T0s&& ..., T1s&& ...)':
main.cpp:67:20: error: 'tie' is not a member of 'std'
     auto tie_t0s = std::tie( std::forward<T0s>(t0s)... );
                    ^
main.cpp:69:20: error: 'tie' is not a member of 'std'
     auto tie_t1s = std::tie( std::forward<T1s>(t1s)... );
                    ^
